; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/ia64/kvm/extr_vcpu.c_check_mm_mode_switch.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/ia64/kvm/extr_vcpu.c_check_mm_mode_switch.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.kvm_vcpu = type { i32 }
%struct.ia64_psr = type { i64, i64, i64 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @check_mm_mode_switch(%struct.kvm_vcpu* %0, %struct.ia64_psr* byval(%struct.ia64_psr) align 8 %1, %struct.ia64_psr* byval(%struct.ia64_psr) align 8 %2) #0 {
  %4 = alloca %struct.kvm_vcpu*, align 8
  store %struct.kvm_vcpu* %0, %struct.kvm_vcpu** %4, align 8
  %5 = getelementptr inbounds %struct.ia64_psr, %struct.ia64_psr* %1, i32 0, i32 0
  %6 = load i64, i64* %5, align 8
  %7 = getelementptr inbounds %struct.ia64_psr, %struct.ia64_psr* %2, i32 0, i32 0
  %8 = load i64, i64* %7, align 8
  %9 = icmp ne i64 %6, %8
  br i1 %9, label %22, label %10

10:                                               ; preds = %3
  %11 = getelementptr inbounds %struct.ia64_psr, %struct.ia64_psr* %1, i32 0, i32 1
  %12 = load i64, i64* %11, align 8
  %13 = getelementptr inbounds %struct.ia64_psr, %struct.ia64_psr* %2, i32 0, i32 1
  %14 = load i64, i64* %13, align 8
  %15 = icmp ne i64 %12, %14
  br i1 %15, label %22, label %16

16:                                               ; preds = %10
  %17 = getelementptr inbounds %struct.ia64_psr, %struct.ia64_psr* %1, i32 0, i32 2
  %18 = load i64, i64* %17, align 8
  %19 = getelementptr inbounds %struct.ia64_psr, %struct.ia64_psr* %2, i32 0, i32 2
  %20 = load i64, i64* %19, align 8
  %21 = icmp ne i64 %18, %20
  br i1 %21, label %22, label %25

22:                                               ; preds = %16, %10, %3
  %23 = load %struct.kvm_vcpu*, %struct.kvm_vcpu** %4, align 8
  %24 = call i32 @switch_mm_mode(%struct.kvm_vcpu* %23, %struct.ia64_psr* byval(%struct.ia64_psr) align 8 %1, %struct.ia64_psr* byval(%struct.ia64_psr) align 8 %2)
  br label %25

25:                                               ; preds = %22, %16
  ret void
}

declare dso_local i32 @switch_mm_mode(%struct.kvm_vcpu*, %struct.ia64_psr* byval(%struct.ia64_psr) align 8, %struct.ia64_psr* byval(%struct.ia64_psr) align 8) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
